grammars/tree-sitter-checkmate/grammar.js
    source_file: ($) =>
      repeat(choice($._newline, $._top_level_item)),

    // ------------------------------------------------------------------
    // Lexical
    // ------------------------------------------------------------------

    _newline: ($) => token(/[\r\n]+/),

    line_comment: ($) => token(seq('//', /[^\r\n]*/)),

    string: ($) => token(/"(?:\\[^\r\n]|\\|[^"\\\r\n])*"/),

    char_literal: ($) => token(/'(?:\\.|[^\\'])'/),

    // Integer literals (§2.4): decimal with `_` separators between
    // digits, or a radix prefix — hex `0x`/`0X`, octal `0o`/`0O`, binary
    // `0b`/`0B` — with optional separators inside the digit field. A
    // digit-led word that does not match a full numeric grammar stays an
    // identifier (the rule below), so `0xFFg` and `0b12` remain names.
    int_literal: ($) =>
      token(
        choice(
          /0[xX][0-9a-fA-F](_?[0-9a-fA-F])*/,
          /0[oO][0-7](_?[0-7])*/,
          /0[bB][01](_?[01])*/,
          /[0-9](_[0-9]|[0-9])*/,
        ),
      ),

    // Float literals (§2.4): a fractional part and/or an exponent
    // (`e`/`E`, optional sign), `_` separators allowed inside digit runs.
    version: ($) => token(prec(2, /v?\d+\.\d+\.\d+/)),

    identifier: ($) => /([a-zA-Z_]|[0-9]+[a-zA-Z_])[a-zA-Z0-9_]*/,

    dotted_path: ($) =>
      prec.left(seq($.identifier, repeat(seq('.', $.identifier)))),

    // Interpolated strings (§2.8/§4.1): $"...{expr}..." — text runs stop at
    // `{` (island start) and `"` (string end); escape pairs are consumed
    // atomically so `\{` stays literal text.
    interp_string: ($) =>
      seq(
        '$',
        '"',
        repeat(choice($.interp_chunk, $.interpolation)),
        '"',
      ),

    interpolation: ($) =>
      seq(
        '{',
        repeat($._newline),
        field('expression', $._expr),
        repeat($._newline),
        '}',
      ),

    // ------------------------------------------------------------------
    // Types (§2.4, §2.9, §11)
    // ------------------------------------------------------------------

    _type: ($) =>
      choice(
        $.primitive_type,
        $.generic_type,
        $.array_type,
        alias($.identifier, $.type_identifier),
        $.mega_invocation,
      ),

    primitive_type: ($) => choice('int', 'float', 'bool', 'str', 'void'),

    array_type: ($) => prec(2, seq($._type, '[]')),

    _top_level_item: ($) =>
      choice(
        $.import_statement,
        $.struct_declaration,
        $.enum_declaration,
        $.function_declaration,
        $.impl_declaration,
        $.grammar_declaration,
        $.mega_declaration,
        // mega_invocation at top level arrives wrapped in an
        // expression_statement via _statement, keeping one canonical shape.
        $.schema_declaration,
        $.capability_declaration,
        $.interface_declaration,
        $._statement,
      ),

    struct_declaration: ($) =>
      seq(
        'struct',
        field('name', $.identifier),
        optional($.type_parameters),
        '{',
        newlineList($, $.field_declaration),
        '}',
      ),

    field_declaration: ($) =>
      seq(field('type', $._type), field('name', $.identifier)),

    enum_declaration: ($) =>
      seq(
        'enum',
        field('name', $.identifier),
        optional($.type_parameters),
        '{',
        newlineList($, $.enum_variant),
        '}',
      ),

    enum_variant: ($) =>
      seq(
        field('name', $.identifier),
        optional(field('payload', $.parameter_list)),
      ),

    parameter_list: ($) =>
      seq(
        '(',
        repeat($._newline),
        repeat(
          seq(
            $.parameter,
            repeat($._newline),
            optional(seq(',', repeat($._newline))),
          ),
        ),
        ')',
      ),

    parameter: ($) =>
      seq(field('type', $._type), field('name', $.identifier)),

    schema_declaration: ($) =>
      seq('schema', field('name', $.identifier), field('version', $.version)),

    capability_declaration: ($) =>
      seq(
        optional(seq('since', field('since', $.version))),
        'capability',
        field('name', $.identifier),
        optional(seq('requires', field('requires', $.dotted_path))),
        '{',
        newlineList($, choice($.schema_member, $.requires_clause)),
        '}',
      ),

    interface_declaration: ($) =>
      seq(
        optional(seq('since', field('since', $.version))),
        'interface',
        field('name', $.identifier),
        optional(seq('requires', field('requires', $.dotted_path))),
        '{',
        newlineList($, choice($.schema_member, $.requires_clause)),
        '}',
      ),

    requires_clause: ($) => seq('requires', field('path', $.dotted_path)),

    schema_member: ($) =>
      seq(
        optional(field('modifier', choice('suspend', 'optional'))),
        field('return_type', $._type),
        field('name', $.identifier),
        field('parameters', $.parameter_list),
      ),

    // ------------------------------------------------------------------
    // Statements (§2.10, §2.14–§2.16, §A.7)
    // ------------------------------------------------------------------

    // prec(1): `{}` in statement position is an empty block, not an empty
    // map literal; in expression position only the map reading exists.
    block: ($) => prec(1, seq('{', newlineList($, $._statement), '}')),

    _statement: ($) =>
      choice(
        prec(PREC.DECLARATION, $.variable_declaration),
        prec(PREC.DECLARATION, $.infer_declaration),
        $.assignment_statement,
        $.return_statement,
        $.if_statement,
        $.while_statement,
        $.for_statement,
        $.expression_statement,
        $.block,
      ),

    variable_declaration: ($) =>
      seq(
        field('type', $._type),
        field('name', $.identifier),
        '=',
        field('value', $._expr),
      ),

    template_infer_hole: ($) =>
      seq('infer', field('name', choice($.identifier, $.splice))),

    assignment_statement: ($) =>
      seq(
        field('left', $._lvalue),
        field('operator', choice('=', '+=', '-=', '*=', '/=', '%=')),
        field('right', $._expr),
      ),

    _lvalue: ($) =>
      seq(
        $.identifier,
        repeat(
          choice(
            seq('.', $.identifier),
            seq('[', repeat($._newline), $._expr, repeat($._newline), ']'),
          ),
        ),
      ),

    // prec.right: prefer parsing a value over reducing the bare form —
    // `return` is still the restricted production because the value itself
    // cannot begin on the next line (statements separate on newlines).
    expression_statement: ($) => $._expr,

    // ------------------------------------------------------------------
    // Expressions (Appendix A)
    // ------------------------------------------------------------------

    _expr: ($) =>
      choice(
        $.identifier,
        $.int_literal,
        $.float_literal,
        $.bool_literal,
        $.string,
        $.interp_string,
        $.parenthesized_expression,
        $.call_expression,
        $.field_expression,
        $.index_expression,
        $.propagate_expression,
        $.unary_expression,
        $.binary_expression,
        $.match_expression,
        $.array_literal,
        $.map_literal,
        $.splice,
        $.splice_array,
        $.compile_time_call,
        $.quantifier_expression,
        $.mega_invocation,
      ),

    call_expression: ($) =>
      prec(PREC.POSTFIX, seq(field('function', $._expr), $.arguments)),

    arguments: ($) =>
      seq(
        '(',
        repeat($._newline),
        repeat(
          seq(
            $._argument,
            repeat($._newline),
            optional(seq(',', repeat($._newline))),
          ),
        ),
        ')',
      ),

    // Named arguments may be comma-separated or adjacent (§2.12: after the
    // insignificant-newline pass, the multi-line named style arrives as
    // adjacent `name: value` pairs). Template element lists may contain
    // `[each ...]` repetitions directly (§8.4 join conventions).
    _argument: ($) =>
      choice($.named_argument, $.template_each, $.template_when, $._expr),

    named_argument: ($) =>
      seq(
        field('name', $.identifier),
        ':',
        repeat($._newline),
        field('value', $._expr),
      ),

    field_expression: ($) =>
      prec(
        PREC.POSTFIX,
        seq(field('object', $._expr), '.', field('property', $.identifier)),
      ),

    splice_array: ($) => prec(PREC.INDEX, seq($.splice, '[]')),

    unary_expression: ($) =>
      prec(
        PREC.UNARY,
        seq(
          field('operator', choice('-', '!')),
          repeat($._newline),
          field('operand', $._expr),
        ),
      ),

    // Binary operators join across a line break when the line ends with the
    // operator (§A.8). A break BEFORE an operator occurs only inside
    // parentheses (where the real pipeline strips it) — _parenthesized
    // carries a dedicated continuation for that spelling below.
    binary_expression: ($) =>
      choice(
        prec.left(
          PREC.OR,
          seq(
            field('left', $._expr),
            field('operator', '||'),
            repeat($._newline),
            field('right', $._expr),
          ),
        ),
        prec.left(
          PREC.AND,
          seq(
            field('left', $._expr),
            field('operator', '&&'),
            repeat($._newline),
            field('right', $._expr),
          ),
        ),
        prec.left(
          PREC.COMPARE,
          seq(
            field('left', $._expr),
            field('operator', choice('==', '!=', '<', '<=', '>', '>=')),
            repeat($._newline),
            field('right', $._expr),
          ),
        ),
        prec.left(
          PREC.ADD,
          seq(
            field('left', $._expr),
            field('operator', choice('+', '-')),
            repeat($._newline),
            field('right', $._expr),
          ),
        ),
        prec.left(
          PREC.MUL,
          seq(
            field('left', $._expr),
            field('operator', choice('*', '/', '%')),
            repeat($._newline),
            field('right', $._expr),
          ),
        ),
      ),

    // `some x in xs { ... }` / `all x in xs { ... }` (§8.3.4 conditions).
    quantifier_expression: ($) =>
      seq(
        field('quantifier', choice('some', 'all')),
        field('variable', $.identifier),
        'in',
        field('list', $._expr),
        '{',
        field('test', $._expr),
        '}',
      ),

    // §2.15 — match in both statement and expression position.
    array_literal: ($) =>
      seq(
        '[',
        commaOrNewlineList($, choice($._expr, $.template_each, $.template_when)),
        ']',
      ),

    compile_time_call: ($) =>
      prec.right(
        seq('@', field('function', $.dotted_path), optional($.arguments)),
      ),

    // Template splice: `$cap`, `$item.field` (§8.4).
    splice: ($) =>
      prec.left(
        seq(
          '$',
          field('name', $.identifier),
          repeat(seq('.', field('field', $.identifier))),
        ),
      ),

    // ------------------------------------------------------------------
    // §8.2 — grammars
    // ------------------------------------------------------------------

    grammar_declaration: ($) =>
      seq(
        'grammar',
        field('name', $.identifier),
        optional(seq('extends', field('parent', $.identifier))),
        '{',
        repeat(choice($._newline, $.profile_entry, $.rule_declaration)),
        '}',
      ),

    // Lexical profile entries: skip set, comment/string/island forms.
    profile_entry: ($) =>
      seq(
        field('kind', choice('skip', 'comment', 'string', 'island')),
        choice(
          $.character_class,
          seq(
            '(',
            repeat(
              choice(
                $.string,
                $.char_literal,
                'until',
                'multiline',
                $.profile_entry,
              ),
            ),
            repeat($._newline),
            ')',
          ),
        ),
      ),

    rule_declaration: ($) =>
      seq(
        'rule',
        field('name', $.identifier),
        // `rule styleRule(context { selector parent = none }) { ... }`
        optional(seq('(', field('context', $.rule_context), ')')),
        '{',
        repeat(choice($._newline, $._pattern_item)),
        '}',
      ),

    rule_context: ($) =>
      seq('context', '{', newlineList($, $.context_parameter), '}'),

    context_parameter: ($) =>
      seq(
        field('type', $._type),
        field('name', $.identifier),
        optional(seq('=', field('default', $._expr))),
      ),

    // ------------------------------------------------------------------
    // §8.3 — the pattern language
    // ------------------------------------------------------------------

    _pattern_item: ($) =>
      choice(
        $.string,
        $.pattern_iliteral,
        $.pattern_class,
        $.pattern_any,
        $.pattern_scan,
        $.pattern_until,
        $.pattern_line_rest,
        $.pattern_eol,
        $.pattern_line,
        $.pattern_eof,
        $.pattern_soft,
        $.pattern_optional,
        $.pattern_each,
        $.pattern_oneof,
        $.pattern_peek,
        $.pattern_not,
        $.pattern_group,
        $.pattern_indent,
        $.pattern_raw,
        $.pattern_label,
        $.pattern_where,
        $.pattern_rule_ref,
        $.pattern_fragment,
        $.pattern_annotation,
      ),

    character_class: ($) => token(/\[(?:\\.|[^\\\]\r\n])*\]/),

    pattern_class: ($) =>
      seq($.character_class, optional(field('bind', $.pattern_bind))),

    pattern_scan: ($) =>
      seq('scan', $.character_class, optional(field('bind', $.pattern_bind))),

    pattern_until: ($) =>
      seq(
        'until',
        choice($.string, field('stop', $._pattern_body)),
        optional(field('bind', $.pattern_bind)),
      ),

    pattern_eof: ($) => 'eof',

    pattern_soft: ($) => seq('soft', $._pattern_body),

    pattern_optional: ($) => seq('optional', $._pattern_body),

    pattern_each: ($) =>
      seq(
        'each',
        optional('+'),
        optional(
          seq(
            'sep',
            field(
              'separator',
              choice($.string, $.character_class, $.dotted_path, $.pattern_fragment),
            ),
          ),
        ),
        optional('trailing'),
        optional(field('bounds', $.pattern_bounds)),
        $._pattern_body,
        optional(field('bind', $.pattern_bind)),
      ),

    pattern_bounds: ($) => seq('[', $.int_literal, ',', $.int_literal, ']'),

    pattern_oneof: ($) =>
      seq(
        'oneof',
        '{',
        repeat(choice($._newline, ',', $.oneof_branch)),
        '}',
        optional(field('bind', $.pattern_bind)),
      ),

    // prec(1): an empty branch body `=> ()` reads as an empty branch, not an
    // empty pattern_group.
    oneof_branch: ($) =>
      prec(
        1,
        seq(
          field('tag', $.identifier),
          '=>',
          repeat($._newline),
          choice(
            seq('(', repeat(choice($._newline, $._pattern_item)), ')'),
            $._pattern_item,
          ),
        ),
      ),

    pattern_group: ($) =>
      seq(
        '(',
        repeat(choice($._newline, $._pattern_item)),
        ')',
        optional(field('bind', $.pattern_bind)),
      ),

    pattern_indent: ($) =>
      seq(
        'indent',
        choice($._pattern_body, seq('verbatim', optional(field('bind', $.pattern_bind)))),
      ),

    pattern_label: ($) => seq('label', $.string, $._pattern_body),

    pattern_where: ($) => seq('where', field('condition', $._expr)),

    pattern_bind: ($) => seq('as', field('name', $.identifier)),
